# AgFrame

./: .coveragerc  .gitignore  README.md  deepeval.json  docker-compose.yml  environment.yml  pyproject.toml  requirements-dev.txt  requirements.txt  server.py
.agent/rules/: ag-flame.md
app/agents/: node_factory.py
app/api/routers/: settings.py
app/core/config/: config_manager.py
app/core/database/: conversation_utils.py  db.py  history_manager.py  models.py  orm.py  schema.py  stores.py
app/core/llm/: component_loader.py  embeddings.py  llm_factory.py  model_importer.py  (+2 more)
app/examples/: demo_researcher.py  demo_writer.py  graph_demo.py  graph_smoke.py  migrate_memory_to_pgvector.py  verify_auth.py  verify_langfuse_http.py  verify_memory_pgvector.py
app/server/: main.py
configs/: config.example.json
docker/: init-pgvector.sql
docker/rabbitmq/: defs.json
docs/plans/: 2026-03-01-test-suite.md
scripts/: generate_eval_report.sh  generate_test_report.py  perf_bench.py  run_evals.sh  run_test_suite.sh  security_scan.py  start-worker.sh  test_rag_logic.py
tests/: conftest.py  test_agent_core.py  test_api_auth_integration.py  test_api_health.py  test_api_misc.py  test_api_upload_integration.py  test_bm25_benchmark.py  test_bm25_index_builder.py  test_bm25_inverted_index.py  test_bm25_retriever.py  test_bm25_scorer.py  test_evals.py  test_prompt_builder.py  test_prompt_registry_extra.py  test_rag_pipeline.py  test_security_utils.py  test_settings_security.py  test_text_split.py  test_tools_selection.py  test_utils_misc.py
tests/fixtures/: golden_cases.json
(+107 files in other folders)
